Develop master merged (#50)
* Add mean in tornado table VolumetricAnalysis (#1297)

* Remove surface cache file mode (#1298)

* OS temp path for image server (#1302)

* Update README.md with deprecation warning (#1303)

* No Active Rfts error message (#1304)

Co-authored-by: Øyvind Lind-Johansen <olind@equinor.com>

* Pandas 2 compatibility for RFT plotter (#1305)

* Pandas 2 compability for RFT plotter

* black

* Remove use of `wcc.ColorScales` (#1306)

* Fix FutureWarning - cast to dtype (#1309)

* Pandas 2 compability for ParameterResponseCorrelation (#1310)

* Add field outline and custom well picks colors to MapViewerFMU (#1311)

* Replaced use of `DashSubsurfaceViewer` with `SubsurfaceViewer` (#1312)

* Expose rft input files as arguments (#1313)

* exposed rft input files as arguments

* black version updated

* pylint fixes

* pylint fixes

* more fixes

---------

Co-authored-by: Øyvind Lind-Johansen <olind@equinor.com>

* Disable cache for statistical surfaces (#1314)

* Add check for length of numpy array (#1316)

* Fix ensemble colors in relperm (#1317)

---------

Co-authored-by: Therese Natterøy <61694854+tnatt@users.noreply.github.com>
Co-authored-by: Anders Fredrik Kiær <31612826+anders-kiaer@users.noreply.github.com>
Co-authored-by: Øyvind Lind-Johansen <47847084+lindjoha@users.noreply.github.com>
Co-authored-by: Øyvind Lind-Johansen <olind@equinor.com>
Co-authored-by: Hans Kallekleiv <16436291+HansKallekleiv@users.noreply.github.com>
Co-authored-by: Ruben Thoms <69145689+rubenthoms@users.noreply.github.com>
Co-authored-by: Jørgen Herje <82032112+jorgenherje@users.noreply.github.com>

--- a/.github/workflows/subsurface.yml
+++ b/.github/workflows/subsurface.yml
@@ -57,7 +57,6 @@ jobs:
           # Testing against our latest release (including pre-releases)
           pip install --pre --upgrade webviz-config webviz-core-components webviz-subsurface-components
 
-
       - name: 📦 Install test dependencies
         run: |
           pip install .[tests]
@@ -101,7 +100,7 @@ jobs:
           git clone --depth 1 --branch $TESTDATA_REPO_BRANCH https://github.com/$TESTDATA_REPO_OWNER/webviz-subsurface-testdata.git
           # Copy any clientside script to the test folder before running tests
           mkdir ./tests/assets && cp ./webviz_subsurface/_assets/js/* ./tests/assets
-          pytest ./tests --headless --forked --testdata-folder ./webviz-subsurface-testdata
+          pytest ./tests --headless --forked -s --testdata-folder ./webviz-subsurface-testdata
           rm -rf ./tests/assets
 
       - name: 🐳 Build Docker example image
